Fix Settings, Theme,... Add GeneralConfig

--- a/src/ui/config.json
+++ b/src/ui/config.json
@@ -1,5 +1,6 @@
 {
     "Global": {
+        "AutoPopDelay": 5000,
         "BorderRadius": 5,
         "BorderSize": 1,
         "ButtonBox": 40,
@@ -16,6 +17,7 @@
         "ControlPanelButtonWidth": 100,
         "ControlPanelHeight": 60,
         "ControlPanelWidth": 800,
+        "ExpandCollapseButtonBox": 30,
         "FormHeight": 600,
         "FormHeightMax": 800,
         "FormHeightMin": 400,
@@ -26,6 +28,7 @@
         "IconSizeLarge": 256,
         "InfoWarningLabelHeight": 30,
         "InfoWarningLabelWidth": 500,
+        "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
         "Margin": 10,
@@ -38,6 +41,7 @@
         "PaddingLeft": 5,
         "PaddingRight": 5,
         "PaddingTop": 5,
+        "ReshowDelay": 500,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -56,6 +60,7 @@
         "SectionPaddingRight": 5,
         "SectionPaddingTop": 5,
         "SectionWidth": 700,
+        "ShowAlways": true,
         "Spacing": 10,
         "SpacingBottom": 10,
         "SpacingLeft": 10,
@@ -81,6 +86,7 @@
         "TextboxWidth": 200
     },
     "MainForm": {
+        "AutoPopDelay": 5000,
         "BorderRadius": 5,
         "BorderSize": 1,
         "ButtonBox": 40,
@@ -97,6 +103,7 @@
         "ControlPanelButtonWidth": 100,
         "ControlPanelHeight": 60,
         "ControlPanelWidth": 800,
+        "ExpandCollapseButtonBox": 30,
         "FormHeight": 600,
         "FormHeightMax": 800,
         "FormHeightMin": 400,
@@ -107,6 +114,7 @@
         "IconSizeLarge": 256,
         "InfoWarningLabelHeight": 30,
         "InfoWarningLabelWidth": 500,
+        "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
         "Margin": 10,
@@ -119,6 +127,7 @@
         "PaddingLeft": 5,
         "PaddingRight": 5,
         "PaddingTop": 5,
+        "ReshowDelay": 500,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -146,6 +155,7 @@
         "SectionPaddingRight": 5,
         "SectionPaddingTop": 5,
         "SectionWidth": 700,
+        "ShowAlways": true,
         "Spacing": 10,
         "SpacingBottom": 10,
         "SpacingLeft": 10,
@@ -171,6 +181,7 @@
         "TextboxWidth": 200
     },
     "SettingsForm": {
+        "AutoPopDelay": 5000,
         "BorderRadius": 5,
         "BorderSize": 1,
         "ButtonBox": 40,
@@ -187,6 +198,7 @@
         "ControlPanelButtonWidth": 100,
         "ControlPanelHeight": 60,
         "ControlPanelWidth": 800,
+        "ExpandCollapseButtonBox": 30,
         "FormHeight": 600,
         "FormHeightMax": 800,
         "FormHeightMin": 400,
@@ -197,6 +209,7 @@
         "IconSizeLarge": 256,
         "InfoWarningLabelHeight": 30,
         "InfoWarningLabelWidth": 500,
+        "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
         "Margin": 10,
@@ -209,6 +222,7 @@
         "PaddingLeft": 5,
         "PaddingRight": 5,
         "PaddingTop": 5,
+        "ReshowDelay": 500,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -227,6 +241,7 @@
         "SectionPaddingRight": 5,
         "SectionPaddingTop": 5,
         "SectionWidth": 700,
+        "ShowAlways": true,
         "Spacing": 10,
         "SpacingBottom": 10,
         "SpacingLeft": 10,
@@ -252,6 +267,7 @@
         "TextboxWidth": 200
     },
     "PresetsForm": {
+        "AutoPopDelay": 5000,
         "BorderRadius": 5,
         "BorderSize": 1,
         "ButtonBox": 40,
@@ -268,6 +284,7 @@
         "ControlPanelButtonWidth": 100,
         "ControlPanelHeight": 60,
         "ControlPanelWidth": 800,
+        "ExpandCollapseButtonBox": 30,
         "FormHeight": 600,
         "FormHeightMax": 800,
         "FormHeightMin": 400,
@@ -278,6 +295,7 @@
         "IconSizeLarge": 256,
         "InfoWarningLabelHeight": 30,
         "InfoWarningLabelWidth": 500,
+        "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
         "Margin": 10,
@@ -291,6 +309,7 @@
         "PaddingRight": 5,
         "PaddingTop": 5,
         "RowHeight": 30,
+        "ReshowDelay": 500,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
         "SectionHeaderTextTitleHeight": 36,
@@ -308,6 +327,7 @@
         "SectionPaddingRight": 5,
         "SectionPaddingTop": 5,
         "SectionWidth": 700,
+        "ShowAlways": true,
         "Spacing": 10,
         "SpacingBottom": 10,
         "SpacingLeft": 10,
@@ -333,6 +353,7 @@
         "TextboxWidth": 200
     },
     "AboutForm": {
+        "AutoPopDelay": 5000,
         "BorderRadius": 5,
         "BorderSize": 1,
         "ButtonBox": 40,
@@ -349,6 +370,7 @@
         "ControlPanelButtonWidth": 100,
         "ControlPanelHeight": 60,
         "ControlPanelWidth": 800,
+        "ExpandCollapseButtonBox": 30,
         "FormHeight": 600,
         "FormHeightMax": 800,
         "FormHeightMin": 400,
@@ -359,6 +381,7 @@
         "IconSizeLarge": 256,
         "InfoWarningLabelHeight": 30,
         "InfoWarningLabelWidth": 500,
+        "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
         "Margin": 10,
@@ -371,6 +394,7 @@
         "PaddingLeft": 5,
         "PaddingRight": 5,
         "PaddingTop": 5,
+        "ReshowDelay": 500,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -389,6 +413,7 @@
         "SectionPaddingRight": 5,
         "SectionPaddingTop": 5,
         "SectionWidth": 700,
+        "ShowAlways": true,
         "Spacing": 10,
         "SpacingBottom": 10,
         "SpacingLeft": 10,
@@ -414,6 +439,7 @@
         "TextboxWidth": 200
     },
     "HelpForm": {
+        "AutoPopDelay": 5000,
         "BorderRadius": 5,
         "BorderSize": 1,
         "ButtonBox": 40,
@@ -430,6 +456,7 @@
         "ControlPanelButtonWidth": 100,
         "ControlPanelHeight": 60,
         "ControlPanelWidth": 800,
+        "ExpandCollapseButtonBox": 30,
         "FormHeight": 600,
         "FormHeightMax": 800,
         "FormHeightMin": 400,
@@ -440,6 +467,7 @@
         "IconSizeLarge": 256,
         "InfoWarningLabelHeight": 30,
         "InfoWarningLabelWidth": 500,
+        "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
         "Margin": 10,
@@ -452,6 +480,7 @@
         "PaddingLeft": 5,
         "PaddingRight": 5,
         "PaddingTop": 5,
+        "ReshowDelay": 500,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -470,6 +499,7 @@
         "SectionPaddingRight": 5,
         "SectionPaddingTop": 5,
         "SectionWidth": 700,
+        "ShowAlways": true,
         "Spacing": 10,
         "SpacingBottom": 10,
         "SpacingLeft": 10,
