Fix to run with only one section - GeneralConfig - FAILED to Launch

--- a/src/ui/config.json
+++ b/src/ui/config.json
@@ -31,6 +31,8 @@
         "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
+        "ListBoxHeight": 200,
+        "ListBoxWidth": 200,
         "Margin": 10,
         "MarginBottom": 10,
         "MarginLeft": 10,
@@ -42,6 +44,7 @@
         "PaddingRight": 5,
         "PaddingTop": 5,
         "ReshowDelay": 500,
+        "Resizable": true,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -117,6 +120,8 @@
         "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
+        "ListBoxHeight": 200,
+        "ListBoxWidth": 200,
         "Margin": 10,
         "MarginBottom": 10,
         "MarginLeft": 10,
@@ -128,6 +133,7 @@
         "PaddingRight": 5,
         "PaddingTop": 5,
         "ReshowDelay": 500,
+        "Resizable": true,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -212,6 +218,8 @@
         "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
+        "ListBoxHeight": 200,
+        "ListBoxWidth": 200,
         "Margin": 10,
         "MarginBottom": 10,
         "MarginLeft": 10,
@@ -223,6 +231,7 @@
         "PaddingRight": 5,
         "PaddingTop": 5,
         "ReshowDelay": 500,
+        "Resizable": true,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -298,6 +307,8 @@
         "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
+        "ListBoxHeight": 200,
+        "ListBoxWidth": 200,
         "Margin": 10,
         "MarginBottom": 10,
         "MarginLeft": 10,
@@ -308,8 +319,9 @@
         "PaddingLeft": 5,
         "PaddingRight": 5,
         "PaddingTop": 5,
-        "RowHeight": 30,
         "ReshowDelay": 500,
+        "Resizable": true,
+        "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
         "SectionHeaderTextTitleHeight": 36,
@@ -384,6 +396,8 @@
         "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
+        "ListBoxHeight": 200,
+        "ListBoxWidth": 200,
         "Margin": 10,
         "MarginBottom": 10,
         "MarginLeft": 10,
@@ -395,6 +409,7 @@
         "PaddingRight": 5,
         "PaddingTop": 5,
         "ReshowDelay": 500,
+        "Resizable": true,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
@@ -470,6 +485,8 @@
         "InitialDelay": 1000,
         "LabelHeight": 30,
         "LabelWidth": 200,
+        "ListBoxHeight": 200,
+        "ListBoxWidth": 200,
         "Margin": 10,
         "MarginBottom": 10,
         "MarginLeft": 10,
@@ -481,6 +498,7 @@
         "PaddingRight": 5,
         "PaddingTop": 5,
         "ReshowDelay": 500,
+        "Resizable": true,
         "RowHeight": 30,
         "SectionBorderWidth": 1,
         "SectionHeaderHeight": 40,
